--- a/Text_Classification_Machine_Learning 2.ipynb
+++ b/Text_Classification_Machine_Learning 2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,29 +368,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "category\n",
-      "Employee Health, Safety & Wellness                 8\n",
-      "Water Use & Management                             6\n",
-      "Energy Management                                  6\n",
-      "Policies, Standards, Code of Conduct               5\n",
-      "Environmental Impact of Cotton and Other Fibres    5\n",
-      "Training & Development                             4\n",
-      "Long term Viability of Core Business               3\n",
-      "Communication & Engagement                         3\n",
-      "Community Development                              3\n",
-      "Board Structure & Independence                     2\n",
-      "Developing Vocational Skills                       1\n",
-      "Chemical Risks and Management                      1\n",
-      "Supply Chain Standards & Selection                 1\n",
-      "Research, Development & Innovation                 1\n",
-      "Labour Relations & Union Practices                 1\n",
-      "Access to Services                                 1\n",
-      "Education                                          1\n",
-      "Customer Satisfaction                              1\n",
-      "Regulatory & Legal Challenges                      1\n",
-      "Product Societal Value                             1\n",
-      "Environmental Accidents & Remediation              1\n",
-      "Name: count, dtype: int64\n"
+      "0     hile action always speak louder word well arti...\n",
+      "1     nurture talent do good build leader do empower...\n",
+      "2     company profile market cap usd billion 85 year...\n",
+      "3     vision will enable people experience better qu...\n",
+      "4     charter principle coalition long standing comm...\n",
+      "5     business profile arvind today synonymous vast ...\n",
+      "6     corporate governance trust foundation sustaina...\n",
+      "7     board director board committee board arvind re...\n",
+      "8     code conduct code conduct integral component a...\n",
+      "9     case study keeping keen eye legal compliance c...\n",
+      "10    sustainability u sustainability strategically ...\n",
+      "11    sustainability u sustainability arvind core ph...\n",
+      "12    engagement mechanism stakeholder identificatio...\n",
+      "13    initiative broadening farmer perspective invit...\n",
+      "14    empowering employee freedom express planning i...\n",
+      "15    materiality stakeholder expect u form foundati...\n",
+      "16    cotton cultivated cradle civilisation today de...\n",
+      "17    consumption consumption cotton predicted incre...\n",
+      "18    approach sustainable cotton need ensure uninte...\n",
+      "19    organic cotton organic cotton farming process ...\n",
+      "20    bci cotton better cotton initiative seek grow ...\n",
+      "21    vision will enable people experience better qu...\n",
+      "22    case study taking child labour farm challenge ...\n",
+      "23    development programme develop potential never ...\n",
+      "24    neev laying strong foundation productivity rep...\n",
+      "25    structured policy process various management s...\n",
+      "26    safety continuously invest safety health flms ...\n",
+      "27    cleaner healthier safer workplace naroda chall...\n",
+      "28    combating fire incident santej challenge texti...\n",
+      "29    safety emergency preparedness santej challenge...\n",
+      "30    strengthening work permit system various ongoi...\n",
+      "31    upgradation occupational health clinic santej ...\n",
+      "32    society csr vision impact positively quality l...\n",
+      "33    sharda trust trust strategic help alliance rel...\n",
+      "34    focus area sharda trust believe spearheading p...\n",
+      "35    intervention primary school programme programm...\n",
+      "36    primary healthcare healthcare india continues ...\n",
+      "37    developing vocational skill youth workforce to...\n",
+      "38    march 2015 credit analysis research ltd care a...\n",
+      "39    figure fy 2015 16 economic value strong financ...\n",
+      "40    going ahead next five year arvind value creati...\n",
+      "41    local procurement hiring sustainable responsib...\n",
+      "42    ecological imbalance sluggish pace progress in...\n",
+      "43    put practice business wide energy policy commi...\n",
+      "44    arvind energy productivity focus achieving gre...\n",
+      "45    specific electricity consumption santej unit n...\n",
+      "46    kg co2 meter production specific ghg emission ...\n",
+      "47    bengaluru unit skylight effectively reduced ne...\n",
+      "48    water important resource textile production te...\n",
+      "49    consumption production volume grew across wove...\n",
+      "50    effluent management year due persistent effort...\n",
+      "51    water management conservation initiative sante...\n",
+      "52    naroda unit naroda unit oldest continues remai...\n",
+      "53    bengaluru unit commissioned 2005 mysore road g...\n",
+      "54    policy practice robust system policy practice ...\n",
+      "55    spill management policy unplanned uncontrolled...\n",
+      "Name: Text, dtype: object\n"
      ]
     }
    ],
@@ -402,7 +436,7 @@
     "df = pd.read_csv(\"Dataset.csv\", engine='python', encoding=result['encoding'])\n",
     "\n",
     "# Display the category value counts\n",
-    "print(df['category'].value_counts())\n",
+    "# print(df['category'].value_counts())\n",
     "\n",
     "# Convert to lower case, strip whitespace, and remove newline characters\n",
     "df['lower_case'] = df['text'].apply(lambda x: x.lower().strip().replace('\\n', ' ').replace('\\r', ' '))\n",
@@ -425,11 +459,12 @@
     "df['stop_words'] = df['stop_words'].astype('str')\n",
     "\n",
     "# Filter out short words\n",
-    "df['short_word'] = df['stop_words'].str.findall('\\w{2,}')\n",
-    "df['string'] = df['short_word'].str.join(' ')\n",
+    "df['short_word'] = df['stop_words'].str.findall('\\w{2,}')  # Finding out words with length of 2 words by applying regex\n",
+    "df['string'] = df['short_word'].str.join(' ')   \n",
     "\n",
-    "# Lemmatize text\n",
-    "df['Text'] = df['string'].apply(lambda x: \" \".join([Word(word).lemmatize() for word in x.split()]))\n"
+    "# Lemmatize text (text normalization in NLP) (returns base form of words)\n",
+    "df['Text'] = df['string'].apply(lambda x: \" \".join([Word(word).lemmatize() for word in x.split()]))\n",
+    "print(df['Text'])\n"
    ]
   },
   {
@@ -1819,11 +1854,11 @@
    ],
    "source": [
     "import seaborn as sns\n",
-    "fig = plt.figure(figsize=(14,7))\n",
-    "df['length'] = df.text.str.split().apply(len)\n",
-    "ax1 = fig.add_subplot(122)\n",
+    "fig = plt.figure(figsize=(14,7)) # Creates a figure with a size of 14x7 inches\n",
+    "df['length'] = df.text.str.split().apply(len) # Creates a new column\n",
+    "ax1 = fig.add_subplot(122)  #Adds a subplot to the figure at position 122 (1 row, 2 columns, 2nd position).\n",
     "sns.histplot(df['length'], ax=ax1,color='green')\n",
-    "describe = df.length.describe().to_frame().round(2)\n",
+    "describe = df.length.describe().to_frame().round(2) # rounds to 2 decimal place\n",
     "\n",
     "ax2 = fig.add_subplot(121)\n",
     "ax2.axis('off')\n",
